fix: fixed center align for design and type cards

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -582,10 +582,11 @@ h3 {
   .row {
     display: flex;
     align-items: flex-start;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap; }
   .col {
-    flex-basis: 48%; }
+    flex-basis: 45%;
+    margin-left: 1.5rem; }
   .types__card {
     margin-bottom: 5rem; }
   .card__text {
@@ -659,11 +660,12 @@ h3 {
     color: #ffffff; }
   .mrow {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: baseline;
     flex-wrap: wrap; }
   .mcard {
-    flex-basis: 48%; }
+    flex-basis: 45%;
+    margin-left: 1.5rem; }
     .mcard__text {
       position: relative;
       max-width: 23.6rem;
@@ -675,18 +677,15 @@ h3 {
 
 @media screen and (min-width: 1024px) {
   .section-title__heading {
-    color: #131313; }
+    color: #ffffff; }
   .section-title__description {
-    color: #131313; }
-  .design {
-    background: linear-gradient(to bottom, #ffffff 50%, #131313 50%); }
+    color: #ffffff; }
   .mrow {
     flex-direction: row;
     justify-content: space-between;
-    align-items: baseline;
-    flex-wrap: wrap; }
+    align-items: baseline; }
   .mcard {
-    flex-basis: 32%; }
+    flex-basis: 30%; }
     .mcard__text {
       position: relative;
       max-width: 23.6rem;
