--- a/src/sass/templates/_design.sass
+++ b/src/sass/templates/_design.sass
@@ -54,11 +54,12 @@
         color: $light
   .mrow
     flex-direction: row
-    justify-content: space-between
+    justify-content: center
     align-items: baseline
     flex-wrap: wrap
   .mcard
-    flex-basis: 48%
+    flex-basis: 45%
+    margin-left: 1.5rem
     &__text
       position: relative
       max-width: 23.6rem
@@ -72,18 +73,15 @@
   .section
     &-title
       &__heading
-        color: $dark
+        color: $light
       &__description
-        color: $dark
-  .design
-    background: linear-gradient(to bottom, $light 50%, $dark 50%)
+        color: $light
   .mrow
     flex-direction: row
     justify-content: space-between
     align-items: baseline
-    flex-wrap: wrap
   .mcard
-    flex-basis: 32%
+    flex-basis: 30%
     &__text
       position: relative
       max-width: 23.6rem
