--- a/src/sass/templates/_types.sass
+++ b/src/sass/templates/_types.sass
@@ -46,10 +46,11 @@
   .row 
     display: flex
     align-items: flex-start
-    justify-content: space-between
+    justify-content: center
     flex-wrap: wrap
   .col
-    flex-basis: 48%
+    flex-basis: 45%
+    margin-left: 1.5rem
   .types
     &__card
       margin-bottom: 5rem
